• fixed header and body spacing but forgot to create new branch

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -13,7 +13,7 @@ body {
 .header {
     display: flex;
     flex-direction: row;
-    margin: 1rem 2rem 1rem 2rem;
+    margin: 1rem 2rem 3rem 2rem;
     align-items: center;
 }
 .logo {
@@ -23,7 +23,7 @@ body {
 
 .explanation {
     display: flex;
-    align-items: center
+    align-items: center;
     color: #304E57;
     margin-left: 1rem;
     width: 96px;
@@ -77,7 +77,6 @@ body {
     border-radius: 1rem;
     width: 90vw;
     height: 70vh;
-    margin-top: 2rem;
     margin-left: auto;
     padding: 2rem;
     left: 50%;
